[package]
name = "pipe-logger"
version = "1.1.11"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/pipe-logger"
homepage = "https://magiclen.org/pipe-logger"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["command-line-utilities", "development-tools::debugging"]
description= "Stores, rotates, compresses process logs."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/pipe-logger"
branch = "master"

[profile.release]
panic = "abort"

[dependencies]
pipe-logger-lib = "1.1.10"

clap = "2.33.1"
concat-with = "0.2"
terminal_size = "0.1"

[dependencies.byte-unit]
version = "3.1"
features = ["std"]
default-features = false