[package]
name = "pipe-logger"
version = "1.1.16"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.59"
repository = "https://github.com/magiclen/pipe-logger"
homepage = "https://magiclen.org/pipe-logger"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["command-line-utilities", "development-tools::debugging"]
description = "Stores, rotates, compresses process logs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
pipe-logger-lib = "1.1.16"

clap = "3.2.23"
concat-with = "0.2"
terminal_size = "0.2"

[dependencies.byte-unit]
version = "4"
features = ["std"]
default-features = false
