[package]
name = "pipe-logger"
version = "1.1.19"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/pipe-logger"
homepage = "https://magiclen.org/pipe-logger"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["command-line-utilities", "development-tools::debugging"]
description = "Stores, rotates, compresses process logs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

pipe-logger-lib = "1.1.17"

byte-unit = "5"
